--- a/rx_main_ctrl/rx_main_ctrl.vcxproj
+++ b/rx_main_ctrl/rx_main_ctrl.vcxproj
@@ -162,7 +162,8 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <DefineConstants></DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
@@ -511,8 +512,7 @@ Exit 0</Command>
     <PostBuildEvent>
       <Command>mkdir "$(ProjectDir)..\bin\win"
 copy "$(OutDir)$(TargetName)$(TargetExt)" "$(ProjectDir)..\bin\win"
-rem copy ..\Externals\matrix\win\lib\matrix32.dll $(OutDir)
-rem copy ..\Externals\matrix\win\lib\matrix32.dll d:\radex\bin\main\win
+copy ..\Externals\Tec-it\win\TBarCode11\Bin\TBarCode11.dll "$(ProjectDir)..\bin\win"
 
 </Command>
     </PostBuildEvent>
