--- a/rx_spooler_ctrl/rx_spooler_ctrl.vcxproj
+++ b/rx_spooler_ctrl/rx_spooler_ctrl.vcxproj
@@ -400,13 +400,15 @@ copy "$(OutDir)rx_rip_lib.dll" "d:\Radex\bin\spooler\win\"</Command>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>Ws2_32.lib;rx_common_lib.lib;TinyXML.lib;rx_rip_lib.lib;TBarCode11_x64.lib;Shell32.lib;Iphlpapi.lib;rx_tif_lib.lib;rx_slicescreen_lib.lib;cudart.lib</AdditionalDependencies>
+      <AdditionalDependencies>Ws2_32.lib;rx_common_lib.lib;TinyXML.lib;rx_rip_lib_x64.lib;TBarCode11_x64.lib;Shell32.lib;Iphlpapi.lib;rx_tif_lib.lib;rx_slicescreen_lib.lib;cudart.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);..\Externals\Tec-it\Win\TBarCode11\Lib;..\Externals\cuda\lib\x64</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(ProjectDir)..\bin\win"
 copy "$(OutDir)$(TargetName)$(TargetExt)" "$(ProjectDir)..\bin\win\"
-copy "$(ProjectDir)..\Externals\Tec-it\Win\TBarCode11\Bin\TBarCode11_x64.dll" "$(ProjectDir)..\bin\win\"</Command>
+copy "$(ProjectDir)rx_rip_lib_x64.dll"  "$(ProjectDir)..\bin\win\"
+copy "$(ProjectDir)..\Externals\Tec-it\Win\TBarCode11\Bin\TBarCode11_x64.dll" "$(ProjectDir)..\bin\win\"
+</Command>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>..\VersionUpdate $(ProjectDir)version.c</Command>
