--- a/mvt_digiprint_gui/rx_AlignFilter/rx_AlignFilter.vcxproj
+++ b/mvt_digiprint_gui/rx_AlignFilter/rx_AlignFilter.vcxproj
@@ -90,11 +90,15 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>..\OpenCV_4.20\opencv\build\include;$(IncludePath)</IncludePath>
     <LibraryPath>..\OpenCV_4.20\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(ProjectDir)..\..\_out\$(Configuration)_$(Platform)\</OutDir>
+    <IntDir>$(ProjectDir)..\..\_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>..\OpenCV_4.20\opencv\build\include;$(IncludePath)</IncludePath>
     <LibraryPath>..\OpenCV_4.20\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(ProjectDir)..\_out\$(Configuration)_$(Platform)\</OutDir>
+    <IntDir>$(ProjectDir)..\_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -212,7 +216,9 @@
       <Command>rem "%ProgramFiles(x86)%\Microsoft Visual Studio\2019\Community\Common7\IDE\TextTransform.exe" -a !!BuildConfiguration!$(Configuration) "$(ProjectDir)\Version.tt"</Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>xcopy /y /d  "$(ProjectDir)..\External\OpenCv_4.20\opencv\build\x64\vc15\bin\opencv_world420.dll" "$(OutDir)"</Command>
+      <Command>copy "$(TargetPath)" "$(ProjectDir)..\..\bin\gui\"
+copy "$(ProjectDir)..\register_dll\*.bat" "$(ProjectDir)..\..\bin\gui\"
+xcopy /y /d  "$(ProjectDir)..\External\OpenCv_4.20\opencv\build\x64\vc15\bin\opencv_world420.dll" "$(ProjectDir)..\..\bin\gui"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
