--- a/mvt_digiprint_gui/rx_AlignFilter/rx_AlignFilter.vcxproj
+++ b/mvt_digiprint_gui/rx_AlignFilter/rx_AlignFilter.vcxproj
@@ -184,7 +184,7 @@
       </SDLCheck>
       <PreprocessorDefinitions>NDEBUG;RXALIGNFILTER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>..\External\OpenCL SDK\7.0\include;..\External\baseclasses;..\External\OpenCv_4.20\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>"..\External\OpenCL SDK\7.0\include";..\External\baseclasses;..\External\OpenCv_4.20\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <SupportJustMyCode>true</SupportJustMyCode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
