Changed .gitignore and deleted AssemblyInfo.cs to get through the tests.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ version.c
 /bin/newgui/*.dll
 *.suo
 /RX-LabelComposer/Properties/AssemblyInfo.cs
+/RX-LabelComposer/rx_rip_lib_x64.dll
 /bin/gui/*.dll
 /bin/gui/*.ppk
 /printed/*.bmp
