--- a/rx_common_lib_cs/rx_common_lib_cs.csproj
+++ b/rx_common_lib_cs/rx_common_lib_cs.csproj
@@ -45,7 +45,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>_out\Debug_x64\</OutputPath>
+    <OutputPath>..\_out\Debug_x64\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
