--- a/mvt_digiprint_gui/mvt_digiprint_gui.csproj
+++ b/mvt_digiprint_gui/mvt_digiprint_gui.csproj
@@ -127,7 +127,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug-Remote|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>\\192.168.200.2\radex\_out\Debug-Remote_x64\</OutputPath>
+    <OutputPath>bin\x64\Debug-Remote\</OutputPath>
     <DefineConstants>DEBUG;TRACE;RX_DigiPrint;X64</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
