--- a/mvt_digiprint_gui/mvt_digiprint_gui.csproj
+++ b/mvt_digiprint_gui/mvt_digiprint_gui.csproj
@@ -1657,6 +1657,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\Bitmaps\PG_Mark_Verso_INV.ico" />
+    <Resource Include="Resources\Bitmaps\PG_Mark_Verso.ico" />
     <EmbeddedResource Include="Resources\Language\Resources.de-DE.resx" />
     <EmbeddedResource Include="Resources\Language\Resources.es-ES.resx" />
     <EmbeddedResource Include="Resources\Language\Resources.fr-FR.resx">
