--- a/rx_robot_ctrl/rx_robot_ctrl/.cproject
+++ b/rx_robot_ctrl/rx_robot_ctrl/.cproject
@@ -36,6 +36,7 @@
 									<listOptionValue builtIn="false" value="&quot;../lib/FreeRTOS/Source/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../lib/lwip/src/arch&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../lib/lwip/src/include&quot;"/>
+									<listOptionValue builtIn="false" value="../../includes"/>
 								</option>
 								<option id="gnu.c.compiler.option.dialect.std.2102630527" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.default" valueType="enumerated"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1238074104" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
@@ -59,6 +60,7 @@
 							<tool id="com.ftdichip.managedbuild.gnu.cross.ft90x.tool.cpp.linker.1956144717" name="FT9xx G++ Linker" superClass="com.ftdichip.managedbuild.gnu.cross.ft90x.tool.cpp.linker"/>
 							<tool id="com.ftdichip.managedbuild.gnu.cross.ft90x.tool.archiver.1525899211" name="FT9xx GCC Archiver" superClass="com.ftdichip.managedbuild.gnu.cross.ft90x.tool.archiver"/>
 							<tool id="com.ftdichip.assembler.ft900.debug.freertos.1311495989" name="FT9xx GCC Assembler" superClass="com.ftdichip.assembler.ft900.debug.freertos">
+								<option id="gnu.both.asm.option.include.paths.1757298676" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath"/>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1468344911" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
 							<tool id="com.ftdichip.managedbuild.gnu.cross.ft90x.tool.createflash.1160174916" name="FT9xx Flash File Generator" superClass="com.ftdichip.managedbuild.gnu.cross.ft90x.tool.createflash"/>
@@ -121,7 +123,7 @@
 								<option id="com.ftdichip.managedbuild.gnu.cross.ft90x.build.gcc.cpp.compiler.option.debugging.level.538420784" name="Debug Level" superClass="com.ftdichip.managedbuild.gnu.cross.ft90x.build.gcc.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
 							</tool>
 							<tool id="com.ftdichip.linker.ft900.release.freertos.1255602950" name="FT9xx GCC Linker" superClass="com.ftdichip.linker.ft900.release.freertos">
-								<option id="com.ftdichip.linker.option.ldOther.ft900.release.freertos.1846908706" superClass="com.ftdichip.linker.option.ldOther.ft900.release.freertos" useByScannerDiscovery="false" valueType="stringList">
+								<option id="com.ftdichip.linker.option.ldOther.ft900.release.freertos.1846908706" name="Other options (-Xlinker [option])" superClass="com.ftdichip.linker.option.ldOther.ft900.release.freertos" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="-dT &quot;../ld/freertos.ld&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.4241964" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
@@ -184,4 +186,5 @@
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
